popup window style changes

--- a/public/templates/popup.ejs
+++ b/public/templates/popup.ejs
@@ -11,9 +11,9 @@
             <input type="tel" id="phone" name="phone" placeholder="+7(921)-999-99-99" required>
 
             <button class="button-nameAndTel" type="submit">Отправить</button>
-
-            <p class="consent-text">*Нажимая на кнопку, вы даете свое согласие на обработку персональных данных</p>
-
+            <div class="consent-text">
+                <a class="a-consent">*Нажимая на кнопку, вы даете свое согласие на обработку персональных данных</a>
+            </div>
             <!-- Контейнер для сообщений -->
             <div id="formMessage"></div>
         </form>
