--- a/public/styles/popup.css
+++ b/public/styles/popup.css
@@ -14,7 +14,7 @@
 
 /* Контент формы */
 .popup-content {
-    background: #333; /* Серый фон */
+    background: #635655; /* Серый фон */
     padding: 20px;
     width: 500px;
     height: 470px; /* Фиксированная высота */
@@ -45,6 +45,7 @@
 
 /* Поля формы */
 label {
+    font-family: "Montserrat", sans-serif;
     text-align: left;
     display: block;
     font-size: 20px;
@@ -55,12 +56,17 @@ input {
     width: 100%;
     padding: 15px;
     margin-bottom: 15px;
-    border: 2px solid #ff581d;
+    border: 1px solid #ff581d;
     border-radius: 5px;
+    background-color: #2d2d2d;
+    outline: none;
+    color: white;
 }
 
 /* Кнопка отправки */
 .button-nameAndTel {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
     width: 100%;
     padding: 13px;
     background-color: #f5f6fa;
@@ -80,8 +86,18 @@ input {
 /* Текст про согласие */
 .consent-text {
     font-size: 12px;
-    color: gray;
+    color: rgb(229, 229, 229);
     margin-top: 10px;
+}
+
+.a-consent {
+    font-weight: 300;
+    font-size: 15px;
+}
+
+input::placeholder {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
 }
 
 /* Блокировка прокрутки страницы */
