--- a/public/styles/list-business-visa.css
+++ b/public/styles/list-business-visa.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+a {
+    color: inherit;
+    cursor: pointer;
+}
+
 body {
     font-family: "Montserrat", sans-serif;
     background-color: #000; /* Черный фон */
