--- a/public/templates/logistics.ejs
+++ b/public/templates/logistics.ejs
@@ -49,7 +49,7 @@
     </div>
     <div class="form">
         <h2>Узнайте условия доставки<br>и рассчитайте её <span style="color: rgb(255, 88, 29);">стоимость</span></h2>
-        <form method="get" class="cargo-form">
+        <div class="cargo-form">
             <p class="form_title_name">Наименование груза</p>
             <input type="text" name="Cargo name" class="cargo-form-input" placeholder="Например: автозапчасти">
             <div class="cargo-weight-volume">
@@ -84,10 +84,11 @@
                 <input type="text" name="enter name" class="cargo-form-input" placeholder="Введите имя">
                 <input type="text" name="enter phone" class="cargo-form-input" placeholder="Введите номер телефона">
             </div>
-            <button type="submit" class="cargo-submit-button">Отправить заявку</button>
+            <button class="cargo-submit-button">Отправить заявку</button>
                 <p class="under-button-text1">*Расчет стоимости носит ориентировочный характер. Для получения точного расчета заполните заявку и с вами свяжется наш менеджер</p>
                 <p class="under-button-text2">*Не является публичной офертой</p>
-        </form>
+        </div>
+        </div>
     </div>
 </div>
 </body>
