--- a/public/templates/popup.ejs
+++ b/public/templates/popup.ejs
@@ -12,7 +12,7 @@
 
             <button class="button-nameAndTel" type="submit">Отправить</button>
             <div class="consent-text">
-                <a class="a-consent">*Нажимая на кнопку, вы даете свое согласие на обработку персональных данных</a>
+                <a class="a-consent">*Нажимая на кнопку, вы даете свое согласие на <u><a class="a-policy" href="/policy">обработку персональных данных</a></u></a>
             </div>
             <!-- Контейнер для сообщений -->
             <div id="formMessage"></div>
