add next button popup form

--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -117,7 +117,7 @@
                     <p class="promo-description">
                         В стоимость входит консультирование, подготовка документов, все сборы,<br>оформление визы! Срок выполнения - 3 рабочих дня!
                     </p>
-                    <button class="promo-button">Заказать</button>
+                    <button id="openPopup" class="promo-button">Заказать</button>
                     <p class="promo-note">
                         *Нажимая на кнопку, вы даете свое согласие <br>
                         на обработку персональных данных
@@ -133,7 +133,7 @@
                     <div class="consultation-title">Получите <span class="highlight">бесплатную консультацию</span></div>
                     <div class="consultation-subtitle">Наши специалисты помогут вам решить любой вопрос</div>
                 </div>
-                <button class="btn_cons">Получить консультацию</button>
+                <button id="openPopup" class="btn_cons">Получить консультацию</button>
             </div>
         </div>
     </div>
