changes media in files

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -475,27 +475,6 @@ body {
     color: #FF5722;
 }
 
-
-@media (max-width: 768px) {
-    .consultation-container {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    .consultation-text {
-        margin-right: 0;
-        margin-bottom: 30px;
-    }
-
-    .btn_cons {
-        margin-left: 0;
-        margin-top: 30px;
-    }
-}
-
-
-/* Футер */
 footer {
     background-color: #2d2d2d;
     color: white;
@@ -506,4 +485,79 @@ footer {
     width: 100%;
 }
 
+@media (max-width: 768px) {
+    .center {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
 
+    h1 {
+        font-size: 1.8rem;
+        text-align: center;
+    }
+
+    .lines {
+        flex-direction: column;
+        gap: 50px;
+        height: auto;
+    }
+
+    .road {
+        background-size: cover;
+        margin-bottom: 15px;
+    }
+
+    .icons-container {
+        flex-direction: column;
+    }
+
+    .icon-item {
+        width: 100%;
+        text-align: center;
+    }
+
+    .cargo-form {
+        width: 100%;
+    }
+
+    .cargo-submit-button {
+        width: 100%;
+    }
+
+    .under-button-text1, .under-button-text2 {
+        width: 100%;
+        font-size: 14px;
+        text-align: center;
+    }
+}
+
+@media (max-width: 1024px) {
+    .center {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    .lines {
+        gap: 100px;
+    }
+
+    .cargo-form {
+        max-width: 500px;
+    }
+
+    .cargo-weight-volume {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .cargo-submit-button {
+        width: 80%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .center {
+        padding-left: calc(50% - 600px);
+        padding-right: calc(50% - 600px);
+    }
+}
