--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -5,7 +5,8 @@ footer {
     color: white;
     text-align: center;
     padding: 20px 40px 10px 40px;
-    position: absolute;
+    position: relative;
+    flex-wrap: wrap;
     bottom: 0;
     width: 100%;
     gap: 30px;
@@ -22,6 +23,7 @@ footer {
 
 .logo {
     margin-bottom: 10px;
+    height: auto;
 }
 
 .footer-text-left {
@@ -75,19 +77,80 @@ a {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
 }
+
 @media (max-width: 768px) {
     footer {
         flex-direction: column;
         align-items: center;
         text-align: center;
+        padding: 20px;
+        gap: 20px;
+        position: relative;
     }
 
     .footer-images {
         margin: 0;
+        gap: 10px;
+    }
+
+    .footer-images .logo {
+        width: 120px;
+        margin-bottom: 5px;
+    }
+
+    .numbers {
+        width: 150px;
+        height: auto;
     }
 
     .footer-text-left,
     .footer-text-right {
         align-items: center;
+        justify-content: center;
+        text-align: center;
+        margin: 0;
+        gap: 8px;
+    }
+
+    .footer-text-left a,
+    .footer-text-right a {
+        font-size: 16px;
+    }
+
+    .messengers {
+        justify-content: center;
+    }
+
+    .messengers img {
+        width: 25px;
+        margin: 5px;
+    }
+}
+
+@media (max-width: 1024px) {
+    footer {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+    }
+
+    .footer-text-left,
+    .footer-text-right {
+        align-items: center;
+        text-align: center;
+    }
+
+    .footer-text-left a,
+    .footer-text-right a {
+        font-size: 16px;
+    }
+
+    .messengers {
+        justify-content: center;
+    }
+
+    .messengers img {
+        width: 25px;
     }
 }
