--- a/public/styles/migration.css
+++ b/public/styles/migration.css
@@ -187,7 +187,7 @@ li::before {
     background-color: rgba(0, 0, 0, 0.6);
     color: white;
     width: 570px;
-    height: 599px;
+    height: 469px;
     align-items: flex-start;
     justify-content: flex-start;
 }
@@ -202,7 +202,126 @@ li::before {
     background-color: rgba(0, 0, 0, 0.6);
     color: white;
     width: 570px;
-    height: 599px;
+    height: 469px;
     align-items: flex-start; /* Выравниваем контент влево */
     justify-content: flex-start; /* Убираем центрирование, текст начнется сверху */
+}
+
+.load-documents {
+    font-family: "Montserrat", sans-serif;
+    margin-top: 30px; /* Отступ сверху */
+    width: 300px; /* Задаем ширину кнопки */
+    padding: 12px;
+    background: #ff581d;
+    color: white;
+    font-size: 22px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: bold;
+    display: block; /* Чтобы кнопка не растягивалась */
+    text-align: center;
+    position: relative; /* Позволяет центрировать */
+    left: 37%;
+    transition: all 0.3s ease-in-out;
+    border: none;
+}
+
+.load-documents:hover {
+    background: white;
+    color: black;
+    transform: scale(1.02);
+}
+
+/* Для планшетов (ширина экрана до 1024px) */
+@media screen and (max-width: 1024px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .image-box {
+        width: 80%;
+    }
+
+    .documents {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .document-list,
+    .document-list2 {
+        width: 90%;
+        height: auto;
+    }
+
+    .load-documents {
+        left: auto;
+        width: 80%;
+    }
+}
+
+/* Для мобильных устройств (ширина экрана до 768px) */
+@media screen and (max-width: 768px) {
+    .background-image {
+        width: 100%;
+        margin-top: 0;
+    }
+
+    .image-box {
+        width: 80%;
+    }
+
+    .overlay h2 {
+        font-size: 1.5rem;
+    }
+
+    .overlay p {
+        font-size: 14px;
+    }
+
+    .documents {
+        gap: 20px;
+    }
+
+    .document-list,
+    .document-list2 {
+        padding: 15px;
+    }
+
+    .load-documents {
+        font-size: 18px;
+        padding: 10px;
+        width: 90%;
+    }
+}
+
+/* Для мобильных устройств (ширина экрана до 480px) */
+@media screen and (max-width: 480px) {
+    h1 {
+        font-size: 24px;
+    }
+
+    .order-visa-text1,
+    .order-visa-text2 {
+        font-size: 16px;
+    }
+
+    ul {
+        font-size: 16px;
+    }
+
+    .mig-button {
+        font-size: 14px;
+        padding: 8px 16px;
+    }
+
+    .document-list,
+    .document-list2 {
+        width: 100%;
+    }
+
+    .load-documents {
+        font-size: 16px;
+        padding: 8px;
+    }
 }
