--- a/public/styles/popup.css
+++ b/public/styles/popup.css
@@ -76,6 +76,7 @@ input {
     cursor: pointer;
     font-size: 20px;
     margin-top: 15px;
+    transition: all 0.2s ease-in-out;
 }
 
 .button-nameAndTel:hover {
