--- a/public/templates/logistics.ejs
+++ b/public/templates/logistics.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/logistics.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="../javascript/logistics.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
