--- a/public/templates/migration.ejs
+++ b/public/templates/migration.ejs
@@ -38,9 +38,9 @@
     </div>
     <div class="General center">
         <div class="order-visa-text">
-            <h1 align="center">Заказать визу<span style="color: rgb(255, 88, 29);"> онлайн</span></h1>
+            <h1 align="center">Что нужно для<span style="color: rgb(255, 88, 29);"> получения визы?</span></h1>
             <p class="order-visa-text1" align="center" style="margin-top: 26px">Закажите визу прямо сейчас, не выходя из дома!</p>
-            <p class="order-visa-text2" align="center">Достаточно загрузить пару документов</p>
+            <p class="order-visa-text2" align="center">Достаточно иметь при себе пару документов</p>
         </div>
         <div class="documents">
             <div class="document-list">
@@ -52,13 +52,7 @@
                     <li>Скан внутреннего паспорта <br>всех страниц, где стоят отметки</li>
                     <li>Загранпаспорт <br>(скан лицевой страницы)</li>
                     <li>Справка с работы</li>
-                    <li>Заполненный опросный лист <br>(заполнить по кнопке ниже)</li>
-                    <button class="document-button" onclick="openBusinessVisaForm()">Заполнить опросный лист</button>
-                    <script>
-                        function openBusinessVisaForm() {
-                            window.location.href = 'list-business-visa'; // Переход на страницу
-                        }
-                    </script>
+                    <li>Заполненный опросный лист</li>
                 </ul>
             </div>
             <div class="document-list2">
@@ -67,18 +61,12 @@
                     <li>Цветное фото на белом фоне <br>в электронном виде</li>
                     <li>Скан внутреннего паспорта <br>всех страниц, где стоят отметки</li>
                     <li>Загранпаспорт (скан лицевой страницы)</li>
-                    <li>Заполненный опросный лист <br>(заполнить по кнопке ниже)</li>
-                    <button class="document-button" onclick="openTouristVisaForm()">Заполнить опросный лист</button>
-                    <script>
-                        function openTouristVisaForm() {
-                            window.location.href = 'list-tourist-visa'; // Переход на страницу
-                        }
-                    </script>
+                    <li>Заполненный опросный лист </li>
                 </ul>
             </div>
         </div>
+        <button class="load-documents" type="submit">Заказать визу</button>
     </div>
-
 </body>
 </html>
 
