update files change close button

--- a/public/templates/statusPopup.ejs
+++ b/public/templates/statusPopup.ejs
@@ -1,6 +1,6 @@
 <div id="statusPopup" class="status-popup">
     <div class="status-content">
-        <span id="closePopup" class="close-btn">&#10005;</span> <!-- Крестик внутри формы -->
+        <span id="closeStatusPopup" class="close-btn">&#10005;</span> <!-- Крестик внутри формы -->
         <img id="statusImage" src="" alt="Статус">
         <p id="statusText"></p>
     </div>
