--- a/public/templates/viza.ejs
+++ b/public/templates/viza.ejs
@@ -132,6 +132,7 @@
                 <img src="../img/Rectangle_up.png" alt="Виза 1">
             </div>
                 <div class="visa-title">Однократная</div>
+                <div class="visa-strike-price"><s>16.000руб</s></div>
                 <div class="visa-price">13.500руб</div>
                 <div class="visa-info" style="height: 35%">
                     <div class="info-row">
@@ -169,6 +170,7 @@
             <div class="type-visa-image">
                 <img src="../img/Rectangle_up.png" alt="Виза 2">
                 <div class="visa-title">Двукратная</div>
+                <div class="visa-strike-price"><s>20.000руб</s></div>
                 <div class="visa-price">17.000руб</div>
             </div>
             <div class="visa-info" style="height: 35%">
@@ -207,6 +209,7 @@
             <div class="type-visa-image">
                 <img src="../img/Rectangle_up.png" alt="Виза 3">
                 <div class="visa-title">Многократная</div>
+                <div class="visa-strike-price"><s>24.000руб</s></div>
                 <div class="visa-price">20.000руб</div>
             </div>
             <div class="visa-info" style="height: 35%">
