--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оформление визы в Китай</title>
+    <link rel="icon" type="image/png" href="../img/title-logo.png" style="width: 16px; height: 16px;">
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="../styles/viza.css">
     <link rel="stylesheet" href="../styles/migration.css">
