--- a/public/templates/policy.ejs
+++ b/public/templates/policy.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная - Поднебес</title>
+    <title>Политика конфиденциальности</title>
+    <link rel="icon" type="image/png" href="../img/1-2-3.png">
     <link rel="stylesheet" href="../styles/policy.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
