update files job full button

--- a/public/templates/migration.ejs
+++ b/public/templates/migration.ejs
@@ -15,7 +15,7 @@
                 <div class="overlay">
                     <h2 style="margin-top: -82px">Шенген</h2>
                     <p>Оказываем услуги по визовому<br>оформлению в страны Евросоюза.<br>Быстрое оформление виз во все<br>страны Шенгенской зоны</p>
-                    <button class="mig-button">Заказать услугу</button>
+                    <button id="openPopup" class="mig-button">Заказать услугу</button>
                 </div>
             </div>
             <div class="image-box">
@@ -23,7 +23,7 @@
                 <div class="overlay">
                     <h2>ВНЖ</h2>
                     <p>Быстро оформление и полное<br>сопровождение в получении вида<br>на жительство в странах Евросоюза,<br>Турции, Казахстане, Таджикистане, Кыргызстане и других</p>
-                    <button class="mig-button">Заказать услугу</button>
+                    <button id="openPopup" class="mig-button">Заказать услугу</button>
                 </div>
             </div>
             <div class="image-box">
@@ -31,7 +31,7 @@
                 <div class="overlay">
                     <h2 style="margin-top: -105px;">Гражданство</h2>
                     <p>Получение Гражданства Евросоюза,<br>Сербии, Турции, Казахстана<br>под ключ</p>
-                    <button class="mig-button">Заказать услугу</button>
+                    <button id="openPopup" class="mig-button">Заказать услугу</button>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
                 </ul>
             </div>
         </div>
-        <button class="load-documents" type="submit">Заказать визу</button>
+        <button id="openPopup" class="load-documents" type="submit">Заказать визу</button>
     </div>
 </body>
 </html>
