--- a/public/templates/viza.ejs
+++ b/public/templates/viza.ejs
@@ -159,7 +159,7 @@
                         <img src="../img/orange_mark.png" alt="Иконка">
                         <span>Пребывание по 30\60\90\180дн<br>в зависимости от типа визы</span>
                     </div>
-                    <button class="visa-button">Оформить визу</button>
+                    <button id="openPopup" class="visa-button">Оформить визу</button>
                     <p class="discount-text">
                         *При групповых поездках или заказе<br>нескольких виз предоставляется скидка
                     </p>
@@ -198,7 +198,7 @@
                     <img src="../img/orange_mark.png" alt="Иконка">
                     <span>Пребывание по 30\60\90\180дн<br>в зависимости от типа визы</span>
                 </div>
-                <button class="visa-button">Оформить визу</button>
+                <button id="openPopup" class="visa-button">Оформить визу</button>
                 <p class="discount-text">
                     *При групповых поездках или заказе<br>нескольких виз предоставляется скидка
                 </p>
@@ -233,7 +233,7 @@
                     <img src="../img/orange_mark.png" alt="Иконка">
                     <span>Пребывание по 30\60\90\180дн<br>в зависимости от типа визы</span>
                 </div>
-                <button class="visa-button">Оформить визу</button>
+                <button id="openPopup" class="visa-button">Оформить визу</button>
                 <p class="discount-text">
                     *При групповых поездках или заказе<br>нескольких виз предоставляется скидка
                 </p>
