--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -122,8 +122,7 @@
                     </p>
                     <button id="openPopup" class="promo-button">Заказать</button>
                     <p class="promo-note">
-                        *Нажимая на кнопку, вы даете свое согласие <br>
-                        на обработку персональных данных
+                        *Нажимая на кнопку, вы даете свое согласие на <br> <u><a class="a-policy" href="/policy">обработку персональных данных</a></u>
                     </p>
                 </div>
             </div>
