changes media from footer to header

--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -135,6 +135,10 @@ a {
         padding: 20px;
     }
 
+    .numbers {
+        width: 50%;
+    }
+
     .footer-text-left,
     .footer-text-right {
         align-items: center;
