--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -8,8 +8,8 @@
 
 @media (max-width: 768px) {
     .center {
-        padding-left: 2%;
-        padding-right: 2%;
+        padding-left: calc(10% - 800px);
+        padding-right: calc(10% - 800px);
         text-align: center; /* Центрируем текст */
     }
 }
@@ -22,6 +22,8 @@
     }
 }
 
+
+/* HEADER */
 @media (max-width: 768px) {
     .info-home {
         flex-direction: column; /* Размещаем блоки в колонку */
@@ -100,6 +102,7 @@
     }
 }
 
+/* САМОЛЕТ и КНОПКА */
 @media (max-width: 768px) {
     .visa-banner {
         top: -50px; /* Поднимаем меньше */
@@ -157,34 +160,8 @@
     }
 }
 
-@media (max-width: 720px) {
 
-    .visa-banner {
-        top: -30px; /* Еще меньше сдвига */
-
-    }
-
-    .visa-banner-content {
-        top: 20%;
-        width: 90%;
-        max-width: 400px;
-    }
-
-    .registration-visa {
-        font-size: 0.8rem; /* Еще меньше заголовок */
-    }
-
-    .visa-subtitle {
-        font-size: 1rem;
-    }
-
-    .visa-urgentle-button {
-        padding: 1px 2px;
-        font-size: 1rem;
-        border-radius: 6px;
-    }
-}
-
+/* 6-ИКОНОК */
 @media (max-width: 1024px) {
     .photo-row {
         gap: 30px;
@@ -252,6 +229,7 @@
     }
 }
 
+/* БЛОК-АКЦИЯ*/
 @media (max-width: 768px) {
     .promo-section {
         margin-top: -700px;
@@ -285,6 +263,7 @@
     }
 }
 
+/* КОНСУЛЬТАЦИЯ */
 @media (max-width: 768px) {
     .consultation-title {
         font-size: 1.5rem;
