update phone input

--- a/public/styles/popup.css
+++ b/public/styles/popup.css
@@ -152,3 +152,44 @@ body.locked {
     margin-top: 10px;
     text-align: center;
 }
+
+
+/* Стили для контейнера телефонного ввода */
+.iti {
+    width: 100%;
+}
+
+/* Основные стили для поля телефона */
+.iti input[type="tel"] {
+    width: 100%;
+    padding: 15px;
+    border: 1px solid #ff581d;
+    border-radius: 5px;
+    background-color: #2d2d2d;
+    outline: none;
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+}
+
+/* Убираем фон и границы у дропдауна */
+.iti__flag-container {
+    background: none;
+    border: none;
+}
+
+/* Стилизация списка стран */
+.iti__dropdown {
+    background-color: #2d2d2d !important;
+    border: 1px solid #ff581d !important;
+}
+
+.iti__country {
+    color: white;
+    font-family: "Montserrat", sans-serif;
+}
+
+/* Подсветка при выборе страны */
+.iti__country:hover {
+    background-color: #ff581d !important;
+}
