--- a/public/templates/popup.ejs
+++ b/public/templates/popup.ejs
@@ -8,7 +8,7 @@
             <input type="text" id="name" name="name" placeholder="Иван Иванов" required>
 
             <label for="phone">Номер телефона</label>
-            <input type="tel" id="phone" name="phone" placeholder="+7(921)-999-99-99" required>
+            <input type="tel" id="phone" name="phone" placeholder="(921)-999-99-99" required>
 
             <button class="button-nameAndTel" type="submit">Отправить</button>
             <div class="consent-text">
