--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -77,36 +77,36 @@
         </div>
         <div class="photo-row">
             <div class="photo-container">
-                <img src="../img/orangeRectangle.png" alt="Photo 1" class="gallery-img" style="top: -255%; left: 1%;">
+                <img src="../img/orangeRectangle.png" alt="Photo 1" class="gallery-img-1" style="top: -255%; left: 1%;">
                 <img src="../img/icon_home/1.png" alt="Icon 1" class="icon" style="top: -306%; left: -41%;"> <!-- Иконка для фото 1 -->
-                <div class="photo-text" style="top: -300%; left: -27px;">Аккредитованы<br>в консульстве</div>
+                <div class="photo-text-1" style="top: -300%; left: -27px;">Аккредитованы<br>в консульстве</div>
             </div>
             <div class="photo-container">
-                <img src="../img/orangeRectangle.png" alt="Photo 2" class="gallery-img" style="top: -255%; left: 1%;">
+                <img src="../img/orangeRectangle.png" alt="Photo 2" class="gallery-img-2" style="top: -255%; left: 1%;">
                 <img src="../img/icon_home/2.png" alt="Icon 2" class="icon" style="top: -306%; left: -41%;"> <!-- Иконка для фото 2 -->
-                <div class="photo-text" style="top: -300%; left: -27px;">Оплата после<br>получения визы</div>
+                <div class="photo-text-2" style="top: -300%; left: -27px;">Оплата после<br>получения визы</div>
             </div>
             <div class="photo-container">
-                <img src="../img/orangeRectangle.png" alt="Photo 3" class="gallery-img" style="top: -255%; left: 1%;">
+                <img src="../img/orangeRectangle.png" alt="Photo 3" class="gallery-img-3" style="top: -255%; left: 1%;">
                 <img src="../img/icon_home/3.png" alt="Icon 3" class="icon" style="top: -306%; left: -41%;"> <!-- Иконка для фото 3 -->
-                <div class="photo-text" style="top: -300%; left: -27px;">Работаем 24/7<br>по всей стране</div>
+                <div class="photo-text-3" style="top: -300%; left: -27px;">Работаем 24/7<br>по всей стране</div>
             </div>
         </div>
         <div class="photo-row">
             <div class="photo-container">
-                <img src="../img/orangeRectangle.png" alt="Photo 4" class="gallery-img" style="top: -290%; left: 1%;">
+                <img src="../img/orangeRectangle.png" alt="Photo 4" class="gallery-img-4" style="top: -290%; left: 1%;">
                 <img src="../img/icon_home/4.png" alt="Icon 4" class="icon" style="top: -345%; left: -41%;"> <!-- Иконка для фото 4 -->
-                <div class="photo-text" style="top: -334%; left: -27px;">Полная подготовка<br>документов</div>
+                <div class="photo-text-4" style="top: -334%; left: -27px;">Полная подготовка<br>документов</div>
             </div>
             <div class="photo-container">
-                <img src="../img/orangeRectangle.png" alt="Photo 5" class="gallery-img" style="top: -290%; left: 1%;">
+                <img src="../img/orangeRectangle.png" alt="Photo 5" class="gallery-img-5" style="top: -290%; left: 1%;">
                 <img src="../img/icon_home/5.png" alt="Icon 5" class="icon" style="top: -345%; left: -41%;"> <!-- Иконка для фото 5 -->
-                <div class="photo-text" style="top: -334%; left: -27px;">Подача документов без<br>личного присутствия</div>
+                <div class="photo-text-5" style="top: -334%; left: -27px;">Подача документов без<br>личного присутствия</div>
             </div>
             <div class="photo-container">
-                <img src="../img/orangeRectangle.png" alt="Photo 6" class="gallery-img" style="top: -290%; left: 1%;">
+                <img src="../img/orangeRectangle.png" alt="Photo 6" class="gallery-img-6" style="top: -290%; left: 1%;">
                 <img src="../img/icon_home/6.png" alt="Icon 6" class="icon" style="top: -345%; left: -41%;"> <!-- Иконка для фото 6 -->
-                <div class="photo-text" style="top: -334%; left: -27px;">Курьерская доставка<br>по всей России</div>
+                <div class="photo-text-6" style="top: -334%; left: -27px;">Курьерская доставка<br>по всей России</div>
             </div>
         </div>
         <!-- Блок акции -->
